--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,20 @@
 .app {
   text-align: center;
   height: 100vh;
-  overflow: scroll;
+}
+
+.sections{
+  width: 100%;
+  height: calc(100vh -70px);
+  position: relative;
+  top: 70px;
+  scroll-snap-type: y mandatory;
+  scrollbar-width: none; 
 }
 
 
-
-
+.sections > *{
+   width: 100vw;
+   height:calc(100vh -70px);
+   scroll-snap-align: start;
+}
